--- a/index.html
+++ b/index.html
@@ -14,40 +14,55 @@
 	<head>
 		<meta charset="utf-8">
 		 
-		<title>eo4geo template for Reveal JS</title>
+		<title>Evaluation and planning of urban green structures</title>
 		
 	<!-- AUTHORS: DEFINE METADATA FOR WHOLE SLIDESET HERE: (Dublin Core Metadata format, complemented by BoK-Concepts) -->	
-		<meta property="dc:title" content="What is Copernicus?" />
-		<meta property="dc:creator" content="Stefan Lang" /> 
-		<meta property="dc:publisher" content="University of Salzburg" /> 
-		<meta property="dc:subject" content="Copernicus, EO4GEO, WP5, Satellite, Earth Observation" />
-		<meta property="dc:abstract" content="This is a template slideset for EO4GEO Partners to familiarize with EO4GEO, introducing the idea of Copernicus and its services. Nevertheless, content-generation is not the prime concern of the template" />
-		<meta property="dc:tableOfContents" content="(1) What is EO?; 
-							     (2) Benefits of Copernicus; 
-							     (3) Integration of Jupyter Notebooks; 
-							     (4) Integration of Youtube Video; 
-							     (5) Integration of H5P; 
-							     (6) Copernicus Services; 
-							     (7) Reference list; />
-		<meta property="dc:description" content="Learning outcomes: Understand remote sensing workflow including image acquisition, (pixel-based) image analysis, classification and validation; get to know online portals, data catalogues, and pricing schemes for satellite data; Familiarize with the European Copernicus Earth observation programme; Master standard image analysis routines as implemented in ArcGIS Pro" /> 
-		<meta property="dc:contributor" content="Barbara Hofer" />
-		<meta property="dc:contributor" content="Eva Missoni" />
-		<meta property="dc:created" content="2020-06-20" />
+		<meta property="dc:title" content="Evaluation and planning of urban green structures" />
+		<meta property="dc:creator" content="Greger Lindeberg, Sara Wiman" /> 
+		<meta property="dc:publisher" content="GIB" /> 
+		<meta property="dc:subject" content="	Learning to analyse the context of green infrastructure given vegetation cover or tree points. Learning to interpret different types of data overlays.
+							Understand how to classify a satellite image to achieve vegetation cover. Know where to find suitable satellite data.
+							Learn how to analyse green infrastructure from a specific species point of view.
+							Learn how to analyse and visualize land cover and socio-economic data to get an understanding about the current situation.
+							Know the basics about ecosystem services and the algorithms for computing values for:
+							- Carbon dioxide storage
+							- Water interception
+							- Air pollutant removal
+							- Habitat networks" />
+		<meta property="dc:abstract" content="The values provided by the green infrastructure are often overlooked in the early stages of planning processes. That, and the fact it is often difficult to estimate and argue for green values in comparison to other values with a more commercial direction demands for an easy way to visualise green values at early stages. These could be used for calculating costs for compensation." />
+		<meta property="dc:tableOfContents" content="	- Introduction: ecosystem services provided by urban greenery and trees
+								- Compute EST values
+								- Access to green areas (population, statistics)
+								- Presentation of remote sensing derived land cover maps
+								- Access maps
+								- Green infrastructure, creating habitat network for forest birds
+								- Perform analysis for a specific specie
+								- How to introduce green areas and trees at early stages of the planning process
+								- Prepare maps and report according to the above subjects, for a specific plan" />
+		<meta property="dc:description" content= "	- Knowledge about different data sources and analyses available for in spatial planning context. Be aware of the resolution and limitations of the “green values” data. Discuss and find out how the data can be useful in a planning context.
+								- Understand how to acquire data on urban greenery using remote sensing methods
+								- Understand how the data acquired can be used to improve urban greenery management, especially in the context of climate change adaption
+								- Understand how EO-data in combination with other remote sensing data can contribute to the assessment of ecosystem services" /> 
+		<meta property="dc:contributor" content="" />
+		<meta property="dc:created" content="2021-06-08" />
 		<meta property="dc:type" content="teaching material" /> 
 		<meta property="dc:format" content="html" />
 		<meta property="dc:language" content="EN" />
-		<meta property="dc:SizeOrDuration" content="45min" />
-		<meta property="dc:audience" content="students" />
-		<meta property="dc:educationLevel" content="EQF 6" />
-		<meta property="dc:source” content="Existing youtube-video on Copernicus Climate Change Service; existing Jupyter Notebook on "Well switching in Bangladesh" />
-		<meta property="dc:rightsHolder" content="Stefan Lang" />
+		<meta property="dc:SizeOrDuration" content="90min" />
+		<meta property="dc:audience" content="urban planner / bachelor/master student" />
+		<meta property="dc:educationLevel" content="EQF 4 / 6" />
+		<meta property="dc:source" content="" />
+		<meta property="dc:rightsHolder" content="SpaSe; GEOF, GIB, EPSIT" />
 		<meta property="dc:license" content="https://creativecommons.org/licenses/by-sa/4.0/deed.en" />
 
-		<link rel="dc:relation" href="eo4geo:IP1-3-2" />
-		<link rel="dc:relation" href="eo4geo:IP1-7" />
-		<link rel="dc:relation" href="eo4geo:IP1" />	
-		<link rel="dc:relation" href="eo4geo:IP3-4" />
-		<link rel="dc:relation" href="eo4geo:IP4-2-1" />
+		<link rel="dc:relation" href="eo4geo:PS3-4" />
+		<link rel="dc:relation" href="eo4geo:PS2-2-2-3-2-4-19" />
+		<link rel="dc:relation" href="eo4geo:CF4-4b" />
+		<link rel="dc:relation" href="eo4geo:CV2" />
+		<link rel="dc:relation" href="eo4geo:CV3" />
+		<link rel="dc:relation" href="eo4geo:CV6" />
+		<link rel="dc:relation" href="eo4geo:IP1" />
+		<link rel="dc:relation" href="eo4geo:IP3-1" />
 
 		<link rel="stylesheet" href="internal_restricted/v1.0/css/reveal.css">
 		<!-- CHOOSE BETWEEN 2 EO4GEO TEMPLATE THEMES:-->
