--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<section >
 					<h1>Evaluation and planning of urban green structures</h1>
 					<br>
-					<a href="https://eo4geo.sbg.ac.at//GIB/EvaluationAndPlanning/urbangreen.pdf">Link to the presentation</a>
+					<a href="./resources/urbangreensm.pdf">Link to the presentation</a>
 												 <br>
 				</section>
 
